# finesse

./: .clang-format  .gitignore  .gitmodules  README-FUSE.md  README.md  build-notes.md  build.py  cptest.sh  fbtest.py  finesse_test.py  meson.build  rmtest.sh
.github/ISSUE_TEMPLATE/: add-communications-message.md  issue-report.md  preload.md  task.md
Results/HDD-EXT4-Results/Stat-files-cr-wr-4KB-1th-4Mf-1/: cpu_idle.txt  cpu_user_system_secs.txt  cpu_utilisation.txt  cpustats.txt  diskstats.txt  filebench.out  ops_sec.txt  throughput.txt
Results/HDD-EXT4-Results/Stat-files-cr-wr-4KB-32th-4Mf-1/: cpu_idle.txt  cpu_user_system_secs.txt  cpu_utilisation.txt  cpustats.txt  diskstats.txt  filebench.out  ops_sec.txt  throughput.txt
Results/HDD-EXT4-Results/Stat-files-preall-de-4KB-1th-4Mf-1/: cpu_idle.txt  cpu_user_system_secs.txt  cpu_utilisation.txt  cpustats.txt  diskstats.txt  filebench.out  ops_sec.txt
Results/HDD-EXT4-Results/Stat-files-preall-de-4KB-32th-4Mf-1/: cpu_idle.txt  cpu_user_system_secs.txt  cpu_utilisation.txt  diskstats.txt  filebench.out  ops_sec.txt
Results/HDD-EXT4-Results/Stat-files-preall-re-4KB-1th-1Mf-1/: cpu_idle.txt  cpu_user_system_secs.txt  cpu_utilisation.txt  cpustats.txt  diskstats.txt  filebench.out  ops_sec.txt  throughput.txt
Results/HDD-EXT4-Results/Stat-files-preall-re-4KB-32th-1Mf-1/: cpu_idle.txt  cpu_user_system_secs.txt  (+6 more)
doc/: Finess Flow Open without Preload.ai  Finesse Flow.ai  open-without-preload.tex
example/: cuse.c  cuse_client.c  ioctl.c  ioctl.h  meson.build  passthrough.c  passthrough_fh.c  passthrough_hp.cc  passthrough_ll.c  poll.c  stackfs_ll  stackfs_lowlevel.c
finesse/: .gitignore  README.md  defs.h  dirmap.c  finesse-fuse.c  finesse-internal.h  finesse-search.c  finesse-search.h  finesse.h  finesse.proto  finesse_fuse.h  finesse_msg.h  init.c  list.h  meson.build  mqcomm.c  name_map.c  niccolum.c  openclose.c  test.c  unlink.c
finesse/api/: access.c  api-internal.h  api_test.c  callstats.c  callstats.h  chdir.c  fdmgr.c  finesse-search.c  finesse-search.h  init.c  list.h  meson.build  mkdir.c  openclose.c  read.c  stat.c  statfs.c  unlink.c  write.c
finesse/bitbucket/: Readme.md  access.c  bbgen.ipynb  bbgen2.ipynb  bbgen3.ipynb  bitbucket.c  bitbucket.h  bitbucketcalls.h  bitbucketdata.h  bmap.c  calldata.c  copy_file_range.c  create.c  destroy.c  dir.c  fallocate.c  file.c  finesse-list.h  flock.c  flush.c  forget.c  forget_multi.c  fsync.c  fsyncdir.c  gen.py  getattr.c  getlk.c  getxattr.c  init.c  inode.c  ioctl.c  link.c  listxattr.c  lookup.c  lseek.c  meson.build  mkdir.c  mknod.c  object.c  open.c  (+23 more)
finesse/bitbucket/test/: meson.build  test_bitbucket.c  test_bitbucket.h  test_dir.c  test_file.c  test_inode.c  test_object.c  test_trie.c  test_xattr.c
finesse/client/: dirmap.c  finesse-internal.h  finesse-lookup.h  finesse.c  finesse.h  finesse.proto  finesse_msg.h  meson.build  mkdir.c  mqcomm.h  niccolum.c  openclose.c  pathsearch.c  statfs.c
finesse/client/test/: fptoc.py  meson.build  pathdata.c  testfinesse.c  testfuse.c
finesse/communications/: access.c  buffer.c  commstat.c  create.c  dirmap.c  fcc.c  fcinternal.h  fcs.c  fincomm.c  ioctl.c  meson.build  namemap.c  pathsearch.c  serverstat.c  stat.c  statfs.c  testmsg.c  unlink.c
finesse/communications/lib/: dirmap.c  fcc.c  fcinternal.h  fcs.c  fincomm.c  fincomm.h  finesse.c  meson.build  namemap.c  pathsearch.c  statfs.c  testmsg.c  testrequest.c  unlink.c
finesse/communications/test/: fincomm_test.c  finesse_test.c  finesse_test.h  meson.build  test_base.c
finesse/include/: crc.h  fincomm.h  finesse-fuse.h  finesse-list.h  finesse-server.h  finesse-utils.h  finesse.h  finesse_fuse_msg.h  meson.build  timestamp.h  trie.h
finesse/iowrapper/: iowrapper.c  iowrapper.h  meson.build  shared.c
finesse/iowrapper/tests/: log_normal.c  log_normal.h  meson.build  testiowrapper.c
finesse/munit/: Makefile.am  meson.build
finesse/preload/: Makefile.am  README.md  access.c  chdir.c  chmod.c  chown.c  close.c  dir.c  dup.c  init.c  libc-symbols.h  link.c  list.h  lseek.c  meson.build  mkdir.c  niccolum_msg.h  nicfdmgr.c  nicfs.h  nicfscomm.c  nicfsinit.c  nicfsinternal.h  nicopenclose.c  nicreadwrite.c  nicsearch.c  nictypes.x  nicunlink.c  open.c  preload.c  preload.h  read.c  rename.c  rmdir.c  stat.c  unlink.c  utime.c  write.c
finesse/preload/test/: .gitignore  Makefile.am  fptoc.py  meson.build  pathdata.c  shared_library_path  testnicfs  testnicfs.c
finesse/server/: access.c  finesse-req.c  fs-internal.h  fuse.c  meson.build  namemap.c  native.c  pathname.c  serverstat.c  stat.c  statfs.c  test.c  unlink.c  util.c
finesse/test/: Makefile.am  meson.build  munit.c  testfinesse.c
finesse/tests/: .gitignore  README.md  fcperf.c  fincomm_test.c  finesse_test.c  finesse_test.h  fptoc.py  fuse_test.c  meson.build  pathdata.c  perf_test.c  test_base.c  test_fastlookup.c  test_lookup.c  test_parse.c  test_trie.c  test_utils.c  test_utils.h  testbbfin_data.h  testbbfin_mkdir_data.c  testbbfin_test.c  testfinesse.c  testutils.c
finesse/utils/: crc.c  crc32c.h  fastlookup.c  fasttrie.c  fdmgr.c  finesse-list.h  getname.c  lookup.c  meson.build  murmurhash3.c  murmurhash3.h  prefix.c  timestamp.c  trie.c
include/: fuse_lowlevel.h
lib/: buffer.c  cuse_lowlevel.c  finesse.c  fuse.c  fuse_i.h  fuse_loop_mt.c  fuse_lowlevel.c  fuse_signals.c  fuse_versionscript  meson.build  mount_util.c
poster/: .gitignore  FUSE_structure.ai  FinesseTables.pptx  finesse architecture drawing.ai  finesse_poster.bib  finesse_poster.tex
reference/: kernel-bypass.bib
scripts/: .automate-default-fuse.sh.swp  .gitignore  automate-default-fuse.sh  automate-no-fuse.sh  automate-opts-fuse.sh  disk_stats_wrapper.sh  diskstats.txt  filebench.out  overheads.csv  parse-cpu-stats  parse-disk-stats  parse-filebench  parse_avg.py  temp.txt
subprojects/: ext4fuse.wrap  munit.wrap
test/: meson.build  test_syscalls.c  wrong_command.c
util/: fusermount.c  mount.fuse.c
workloads/samples/: File-server-50th-workload.f  file-cr-wr-4KB-1th-4Mf-workload.f
(+1959 files in other folders)
