bitbucket_sources = [
    'access.c',
    'bitbucket.c',
	'bmap.c',
	'copy_file_range.c',
	'create.c',
	'destroy.c',
	'dir.c',
	'fallocate.c',
	'file.c',
	'flock.c',
	'flush.c',
	'forget.c',
	'forget_multi.c',
	'fsync.c',
	'fsyncdir.c',
	'getattr.c',
	'getlk.c',
	'getxattr.c',
	'init.c',
	'inode.c',
	'ioctl.c',
	'link.c',
	'listxattr.c',
	'lookup.c',
	'lseek.c',
	'mkdir.c',
	'mknod.c',
	'object.c',
	'open.c',
	'opendir.c',
	'poll.c',
	'read.c',
	'readdir.c',
	'readdirplus.c',
	'readlink.c',
	'release.c',
	'releasedir.c',
	'removexattr.c',
	'rename.c',
	'retrieve_reply.c',
	'rmdir.c',
	'setattr.c',
	'setlk.c',
	'setxattr.c',
	'statfs.c',
	'symlink.c',
	'trie.c',
	'unlink.c',
	'write.c',
	'write_buf.c',
]

executable ('bitbucket',
            bitbucket_sources,
            link_with: [libfuse],
            dependencies: [libfuse_dep],
            install: false
)

subdir('test')
